tests/NormalTests/paczka1/fuzzy1/77293084.err
Error in line 2: A956 A946 35,7
Error in line 4: kzc A956 29,3
Error in line 21: nXzmLyK6 A946 67,0
Error in line 23: xldfXIqnORJ A956 96,9
